# interactive-object-segmentation

./: .gitignore  README.md
mask/: CMakeLists.txt  main.cpp  maskUtil.cpp  maskUtil.h  processImage.h  segmentFrame.h
source/: CMakeLists.txt  header.h  main.cpp  maskUtil.cpp  processImage.cpp  segmentFrame.cpp
